# adalatdata_data_pipeline

./: .env.example  .gitignore  INGEST_USAGE.md  LICENSE  README.md  extract.py  ingest.py  init_db.py  md_to_json.py  nlq.py  ocr_extract.py  pyproject.toml
scripts/: capitalize_judge_names.py  categories.txt  extract_categories.py  extract_judge_names.py  judge_names.txt  normalize_judge_names.py
