[project]
name = "data-pipeline2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instructor>=1.15.1",
    "liteparse>=2.0.1",
    "openai>=2.38.0",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
